--- a/contacts-map.html
+++ b/contacts-map.html
@@ -41,7 +41,7 @@
               </a>
             </li>
             <li>
-              <a class="main-nav__link" href="#about-company">
+              <a class="main-nav__link" href="about-company.html">
                 <span>О нас</span>
                 <svg width="26" height="26">
                   <use xlink:href="img/sprite_auto.svg#icon-arrow"></use>
